--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Casa Ihgarassu - Página Inicial</title>
+    <title>Casa Igarassu - Página Inicial</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -68,7 +68,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-primary"><span class="text-dark"><img src="img/casa igarassu 1dfg.png" alt="" height="60" width="60"></span>CasaIgarasu</h1>
+                    <h1 class="m-0 text-primary"><span class="text-dark"><img src="img/casa igarassu 1dfg.png" alt="" height="60" width="60"></span>Casa Igarassu</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -430,7 +430,7 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-primary"><span class="text-dark"> </span>CasaIgarasu</h1>
+                    <h1 class="m-0 text-primary"><span class="text-dark"> </span>Casa Igarassu</h1>
                 </a>
                 <p> Website oficial da Casa Igarassu situado  no centro histório de igarassi em Pernambuco</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Redes Sociais</h6>
