correção do espaçamento no roteiro 3

--- a/roteiros.html
+++ b/roteiros.html
@@ -199,7 +199,7 @@
                             </p>
 
                             <p>*A saída do passeio é da Praia da Gavoa, Igarassu
-                                *Roteiro geralmente é realizado nos finais de semana ficando R$70,00 por pessoa
+                                <br>*Roteiro geralmente é realizado nos finais de semana ficando R$70,00 por pessoa
                                 <br>(Consultar as datas disponíveis) 
                             </p>
                             <div class="border-top mt-3 pt-4 d-block">
